autochech-fixing-footer-1

--- a/index.html
+++ b/index.html
@@ -572,9 +572,10 @@
 
 
         <div class="footer-subscribe-form">
+          <p class="subscribe-label">Subscribe</p>
           <form class="footer-subscribe-form" name="subscription">
-            <label class="subscribe-label" for="E-mail">
-              Subscribe
+            <!-- <label class="subscribe-label" for="E-mail"> -->
+              <!-- Subscribe -->
               <input
                 class="e-mail-input"
                 type="email"
@@ -583,7 +584,7 @@
                 placeholder="E-mail"
                 required
               />
-            </label>
+            <!-- </label> -->
           </form>
           <div class="footer-subscribe-button">
             <button class="subscribe-button" type="submit">
