--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
         <form>
                     <div class="order-form-input">
             <label class="order-modal-label" for="user-name">
-              Name
+              Name</label>
               <div class="order-modal-input">
                 <input
                   class="input-form"
@@ -621,7 +621,7 @@
                   <use href="./images/icons.svg#icon-person-black"></use>
                 </svg>
               </div>
-            </label>
+            
           </div>
           <div class="order-form-input">
             <label class="order-modal-label" for="order-modal-phone">
@@ -635,7 +635,7 @@
                   placeholder=""
                   required
                 />
-                <svg class="order-modal-icon" width="16" height="16">
+                <svg class="order-modal-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-phone-black"></use>
                 </svg>
               </div>
@@ -653,7 +653,7 @@
                   placeholder=""
                   required
                 />
-                <svg class="order-modal-icon" width="16" height="16">
+                <svg class="order-modal-icon" width="18" height="24">
                   <use href="./images/icons.svg#icon-email-black"></use>
                 </svg>
               </div>
