--- a/index.html
+++ b/index.html
@@ -676,12 +676,12 @@
             <input
               class="visually-hidden"
               type="checkbox"
-              id="order-modal-checkbox"
-              name="order-modal-checkbox"
-              value="I accept the terms and conditions of the Privacy Policy"
+              id="user-privacy"
+              name="user-privacy"
+              value="True"
               required
             />
-            <label class="agreement-label-checkbox" for="order-modal-checkbox">
+            <label class="agreement-label-checkbox" for="user-privacy">
               <span class="agreement-checkbox">
                 <svg class="order-modal-icon-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
