autochech-fixing-modal-6

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 type="text"
                 id="user-name"
                 name="user-name"
-                outline="transparent"
+                placeholder=""
                 required
               />
               <svg class="order-modal-icon" width="18" height="24">
