autochech-fixing-modal-15

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
           </ul>
         </div>
 
-        <div class="footer-subscribe-form">
+        <div class="footer-subscribe-box">
           <p class="subscribe-label">Subscribe</p>
           <form class="footer-subscribe-form" name="subscription">
             <label class="footer-input">
